--- a/src/styles/components/technologiesContainer.sass
+++ b/src/styles/components/technologiesContainer.sass
@@ -40,3 +40,6 @@
       svg
         color: #61dafb 
         
+@media screen and (max-width: 420px)  
+  .technology-card
+    width: 100% !important
