--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -12,3 +12,13 @@
     background: variables.$gradient
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
+
+@media screen and (max-width: 420px)  
+  #portfolio
+    gap: 1rem
+    padding: 1rem
+    h1    
+      font-size: 2rem 
+      text-align: center
+      margin-bottom: 0
+      
