--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -12,6 +12,7 @@
     background: variables.$gradient
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
+    text-align: center
 
 @media screen and (max-width: 420px)  
   #portfolio
