--- a/src/styles/components/socialNetWorks.sass
+++ b/src/styles/components/socialNetWorks.sass
@@ -18,12 +18,13 @@
     color: #0072B1
 
   #github
-    color: #111
+    color: variables.$text-color
 
   :hover
     background: variables.$gradient
     >svg
       color: variables.$text-color
+      
 
 
 
